--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,5 +1,5 @@
-body,a,p,label,h1,h2,h3,h4,h5,h6 {
-    font-family: 'Montserrat', serif;
+body,a,p,label,h1,h2,h3,h4,h5,h6,button {
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
